--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,46 +1,11 @@
-aioredis==1.3.1
-asgiref==3.4.1
-async-timeout==3.0.1
-attrs==21.2.0
-autobahn==21.3.1
-Automat==20.2.0
-autopep8==1.5.7
-cffi==1.14.6
+# server/requirements.txt
+
 channels==3.0.2
 channels-redis==3.2.0
-constantly==15.1.0
-cryptography==3.4.8
-daphne==3.0.2
 Django==3.1.4
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
-hiredis==2.0.0
-hyperlink==21.0.0
-idna==3.2
-incremental==21.3.0
-iniconfig==1.1.1
-msgpack==1.0.2
-packaging==21.0
 Pillow==8.0.1
-pluggy==1.0.0
 psycopg2-binary==2.8.6
-py==1.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.7.0
-pycparser==2.20
-PyJWT==2.1.0
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pytest==6.2.5
 pytest-asyncio==0.14.0
 pytest-django==4.1.0
-pytz==2021.1
-service-identity==21.1.0
-six==1.16.0
-sqlparse==0.4.2
-toml==0.10.2
-Twisted==21.7.0
-txaio==21.2.1
-typing-extensions==3.10.0.2
-zope.interface==5.4.0
