--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,12 @@ services:
     container_name: taxi-server
     depends_on:
       - taxi-redis
+      - taxi-database # new
     environment:
+      - PGDATABASE=taxi # new
+      - PGUSER=taxi # new
+      - PGPASSWORD=taxi # new
+      - PGHOST=taxi-database # new
       - REDIS_URL=redis://taxi-redis:6379/0
     ports:
       - 8003:8000
@@ -18,3 +23,34 @@ services:
   taxi-redis:
     container_name: taxi-redis
     image: redis:6-alpine
+
+  taxi-database:
+    container_name: taxi-database
+    image: postgres:13-alpine
+    environment:
+      - POSTGRES_USER=taxi
+      - POSTGRES_PASSWORD=taxi
+    expose:
+      - 5432
+    volumes:
+      - taxi-database:/var/lib/postgresql/data
+
+  taxi-client:
+    build:
+      context: ./client
+    command: npm start
+    container_name: taxi-client
+    depends_on:
+      - taxi-server
+    ports:
+      - 3001:3000
+    stdin_open: true
+    volumes: # new
+      - ./client:/usr/src/app
+    environment: # new
+      - CHOKIDAR_USEPOLLING=true
+      - REACT_APP_BASE_URL=http://localhost:8003 # new
+
+# new
+volumes:
+  taxi-database:
