--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,6 +3,7 @@
 channels==3.0.2
 channels-redis==3.2.0
 Django==3.1.4
+django-cors-headers==3.6.0 # new
 djangorestframework==3.12.2
 djangorestframework-simplejwt==4.6.0
 Pillow==8.0.1
